syntax = "proto3";
package corepb;

message Certification {
	bytes certificate_hash = 1;

	bytes issuer = 2;
	bytes certified = 3;

	int64 issue_time = 4;
	int64 expiration_time = 5;
	int64 revocation_time = 6;
}